--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
-    <title>Wordle - A daily word game</title>
-    <meta name="description" content="Guess the hidden word in 6 tries. A new puzzle is available each day.">
+    <title>Trump-le - A daily word game with Trump phrases</title>
+    <meta name="description" content="Guess the hidden word in 2 tries. A new puzzle is available each day.">
 
     <!-- FB Meta Tags -->
     <meta property="og:url" content="https://www.powerlanguage.co.uk/wordle/">
@@ -128,7 +128,7 @@
         window.wordle.hash = 'e65ce0a5';
       })();
     </script>
-    <script src="main.e65ce0a5.js"></script>
+    <script src="wordle.js"></script>
     <game-app></game-app>
   </body>
 </html>
