--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
     <title>Trump-le - A daily word game with Trump phrases</title>
-    <meta name="description" content="Guess the hidden word in 2 tries. A new puzzle is available each day.">
+    <meta name="description" content="Guess the hidden word in 6 tries. A new puzzle is available each day.">
 
     <!-- FB Meta Tags -->
-    <meta property="og:url" content="https://www.powerlanguage.co.uk/wordle/">
+    <meta property="og:url" content="https://jameswaller.github.io">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Trump-le - A daily word game">
     <meta property="og:description" content="Guess the hidden word in 6 tries. A new puzzle is available each day.">
