--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Trump-le - A daily Trump-themed word game">
     <meta property="og:description" content="Guess the hidden word in 6 tries. A new puzzle is available each day.">
-    <meta property="og:image" content="https://www.dailywordle.com/images/wordle_og_1200x630.png">
+    <meta property="og:image" content="https://i.postimg.cc/t4nkXFn2/trumple.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
